improved project cards

--- a/index.html
+++ b/index.html
@@ -58,23 +58,17 @@
                 </div>
                 <!-- Projects List -->
                 <div class="big" id="projectCardList">
-                    <a href="https://mega.nz/folder/OnIAiJCK#du_N3G-J9C5QHWTt4_VfPw" class="projectCard">
+                    <a href="https://github.com/rhit-loafmant/CSSE-230-Group-2-Final-Project" class="projectCard">
                         <div class="card" href="#">
-                            <img class="card-img-top" src="assets/graph2.png" alt="Card image cap">
+                            <img class="card-img-top" src="assets/teamflatearth.png" alt="Card image cap">
                             <div class="card-body">
-                              <h5 class="card-title">A* Graph Pathfinder Project</h5>
-                              <p class="card-text">In skyrim, instantly find the best path to your destination! <br>
-                                <i class="small">Created with help from Conor Peper, Seth Marcus, and Napiwocki</i><br>
-                                <i>Requires Java 8</i></p>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="" class="projectCard">
-                        <div class="card" href="#">
-                            <img class="card-img-top" src="assets/website.png" alt="Card image cap">
-                            <div class="card-body">
-                              <h5 class="card-title">Personal Portfolio Website</h5>
-                              <p class="card-text">Built from scratch with a little help from bootstrap and flexbox. </p>
+                                <h5 class="card-title">Airports of the World!</h5>
+                                <p class="card-text">A graph-based pathfinding algorithm that uses Dijkstra's algorithm 
+                                combined with a geometrically spherical distance method to make a truly ironic* application!</p>
+                                <p class="small"><i>Collaborated with *Team Flat Earth: Jaden Rigg, Nathan Loafman, and small part from Kaileb White.</i></p>
+                                <div class="card-footer text-muted">
+                                    <i>May 22nd, 2021</i>
+                                </div>
                             </div>
                         </div>
                     </a>
@@ -82,9 +76,38 @@
                         <div class="card" href="#">
                             <img class="card-img-top" src="assets/groupcalendar.png" alt="Card image cap">
                             <div class="card-body">
-                              <h5 class="card-title">Group Event Scheduler</h5>
-                              <p class="card-text">A group event scheduler that averages a study group's availability for easy planning! <br>
-                                <i class="small">Created with help from Evan Slater</i></p>
+                                <h5 class="card-title">Group Event Scheduler</h5>
+                                <p class="card-text">A group event scheduler that averages a study group's availability for easy planning!</p>
+                                <p class="small"><i>Collaborated with Evan Slater</i></p>
+                                <div class="card-footer text-muted">
+                                    <i>May 21st, 2021</i>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="" class="projectCard">
+                        <div class="card" href="#">
+                            <img class="card-img-top" src="assets/website.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Personal Portfolio Website</h5>
+                                <p class="card-text">Built from scratch with a little help from bootstrap and flexbox.</p>
+                                <!-- <p class="small"><i></i></p> -->
+                                <div class="card-footer text-muted">
+                                    <i>Started on April 4th, 2021</i>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="https://mega.nz/folder/OnIAiJCK#du_N3G-J9C5QHWTt4_VfPw" class="projectCard">
+                        <div class="card" href="#">
+                            <img class="card-img-top" src="assets/graph2.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Skyrim Graph Pathfinder Project</h5>
+                                <p class="card-text">In skyrim, instantly find the best path to your destination using A*!</p>
+                                <p class="small"><i>Collaborated with Team Epic Maps: Conor Peper, Seth Marcus, and Napiwocki</i></p>
+                                <div class="card-footer text-muted">
+                                    <i>Feb 21st, 2021</i>
+                                </div>
                             </div>
                         </div>
                     </a>
@@ -92,59 +115,27 @@
                         <div class="card" href="#">
                             <img class="card-img-top" src="assets/onpoint.png" alt="Card image cap">
                             <div class="card-body">
-                              <h5 class="card-title">On Point - Reaction Game</h5>
-                              <p class="card-text">Python game created from scratch in 2 weeks with no prior python experience. <br>
-                                This game is all about rhythm, timing, and matching in order to get the highest score! <br>
-                                <i class="small">Created with help from Tyler Kessis at Operation Catapult 2019</i></p>
+                                <h5 class="card-title">On Point</h5>
+                                <p class="card-text">Python-based reaction game created from scratch in 2 weeks with no prior python experience. This game is all about rhythm, timing, and matching in order to get the highest score! </p>
+                                <p class="small"><i>Collaborated with Tyler Kessis at Operation Catapult 2019</i></p>
+                                <div class="card-footer text-muted">
+                                    <i>July 17th, 2019</i>
+                                </div>
                             </div>
                         </div>
                     </a>
-                    <a href="https://github.com/rhit-loafmant/CSSE-230-Group-2-Final-Project" class="projectCard">
+                    
+                    <!-- <a href="https://github.com/rhit-loafmant/CSSE-230-Group-2-Final-Project" class="projectCard">
                         <div class="card" href="#">
                             <img class="card-img-top" src="assets/teamflatearth.png" alt="Card image cap">
                             <div class="card-body">
-                              <h5 class="card-title">Airports of the World!</h5>
-                              <p class="card-text">A graph-based pathfinding algorithm that uses Dijkstra's algorithm 
-                                combined with a geometrically spherical distance method to make a truly ironic* application!<br>
-                                <i class="small">Created with help from Jaden Rigg, Nathan Loafman, and small part from Kaileb White.</i><br>
-                                <i class="small">*for more context, our team name was Team Flat Earth</i><br>
-                                <i>Requires Java 8</i></p>
-                            </div>
-                        </div>
-                    </a>
-                    <!-- <a href="#" class="projectCard">
-                        <div class="card" href="#">
-                            <img class="card-img-top" src="assets/elon.jpg" alt="Card image cap">
-                            <div class="card-body">
-                              <h5 class="card-title">A project of mine</h5>
-                              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="#" class="projectCard">
-                        <div class="card" href="#">
-                            <img class="card-img-top" src="assets/galaxy.jpg" alt="Card image cap">
-                            <div class="card-body">
-                              <h5 class="card-title">Cool Galaxy</h5>
-                              <p class="card-text">ZOOOOOOOOOOOOM dolor sit amet consectetur adipisicing elit.</p>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="#" class="projectCard">
-                        <div class="card" href="#">
-                            <img class="card-img-top" src="assets/nebula.jpg" alt="Card image cap">
-                            <div class="card-body">
-                              <h5 class="card-title">Nebula</h5>
-                              <p class="card-text">A cool picture of the eagle nebula.</p>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="#" class="projectCard">
-                        <div class="card" href="#">
-                            <img class="card-img-top" src="assets/test.png" alt="Card image cap">
-                            <div class="card-body">
-                              <h5 class="card-title">VERY COOL TEST PROJECT CARD YES VERY</h5>
-                              <p class="card-text">Bingus dolor sit amet consectetur adipisicing elit. </p>
+                                <h5 class="card-title">Airports of the World!</h5>
+                                <p class="card-text">A graph-based pathfinding algorithm that uses Dijkstra's algorithm 
+                                combined with a geometrically spherical distance method to make a truly ironic* application!</p>
+                                <p class="small"><i>Collaborated with Team Flat Earth: Jaden Rigg, Nathan Loafman, and small part from Kaileb White.</i></p>
+                                <div class="card-footer text-muted">
+                                    <i>May 22nd, 2021</i>
+                                </div>
                             </div>
                         </div>
                     </a> -->
