--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Airports of the World!</h5>
                                 <p class="card-text">A graph-based pathfinding algorithm that uses Dijkstra's algorithm 
-                                combined with a geometrically spherical distance method to make a truly ironic* application!</p>
+                                combined with a geometrically spherical distance method to make a truly ironic* application.</p>
                                 <p class="small"><i>Collaborated with *Team Flat Earth: Jaden Rigg, Nathan Loafman, and small part from Kaileb White.</i></p>
                                 <div class="card-footer text-muted">
                                     <i>May 22nd, 2021</i>
