--- a/index.html
+++ b/index.html
@@ -15,16 +15,6 @@
         <link rel="icon" href="assets/favicon.png">
     </head>
     <body class="body">
-        <!-- <nav class="bar">
-            <div class="row">
-                <div class="col-1">
-                    <a href="hverrill.github.io">
-                        <img class="logo" src="assets/logo.png" alt="H Logo. Click to navigate home."> 
-                    </a>
-                </div>
-            </div>
-        </nav> -->
-
         <main class="main" id="top">
             
             <!-- The introduction. Says my name and a short one-liner -->
@@ -43,7 +33,7 @@
                     My goal is to live a happy and fulfilled life while making a positive impact on the world. I'm interested in a lot of diverse topics, including economics, philosophy, behavioral psychology, and technology.
                 </p>
                 <p>
-                    I hope to apply my love of economics and human behavior to my trade, creating products that enhance the human condition and improve life on earth, instead of treating users like profits.
+                    I hope to apply my love of economics and human behavior to my trade in software, creating products that enhance the human condition and improve life on earth, instead of treating users like profits.
                 </p>
             </div>
             <!-- Link to the resume page. May relocate. -->
