update 1 for rh330

--- a/index.html
+++ b/index.html
@@ -33,104 +33,14 @@
                     My goal is to live a happy and fulfilled life while making a positive impact on the world. I'm interested in a lot of diverse topics, including economics, philosophy, behavioral psychology, and technology.
                 </p>
                 <p>
-                    I hope to apply my love of economics and human behavior to my trade in software, creating products that enhance the human condition and improve life on earth, instead of treating users like profits.
+                    I hope to apply my love of economics and human behavior to my trade in software: creating products that enhance the human condition and improve life on earth, instead of treating users like numbers.
                 </p>
             </div>
             <!-- Link to the resume page. May relocate. -->
             <div id="resume" class="big primary">
                 <p>Interested in my stats? Click <a class="link" href="assets/resume_color.pdf">here</a> to view my resume.</p>
             </div>
-            <!-- Projects Section. May make it's own page at some point; -->
-            <div id="projects">
-                <!-- Projects Header -->
-                <div class="header primary"> 
-                    <p>My Projects</p>
-                </div>
-                <!-- Projects List -->
-                <div class="big" id="projectCardList">
-                    <a href="https://github.com/rhit-loafmant/CSSE-230-Group-2-Final-Project" class="projectCard">
-                        <div class="card" href="#">
-                            <img class="card-img-top" src="assets/teamflatearth.png" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Airports of the World!</h5>
-                                <p class="card-text">A graph-based pathfinding algorithm that uses Dijkstra's algorithm 
-                                combined with a geometrically spherical distance method to make a truly ironic* application.</p>
-                                <p class="small"><i>Collaborated with *Team Flat Earth: Jaden Rigg and Nathan Loafman</i></p>
-                                <div class="card-footer text-muted">
-                                    <i>May 22nd, 2021</i>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="https://rosehulmanprojectvault.org/project/-MWdqwK2GH-erjes1lsR" class="projectCard">
-                        <div class="card" href="#">
-                            <img class="card-img-top" src="assets/groupcalendar.png" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Group Event Scheduler</h5>
-                                <p class="card-text">A group event scheduler that averages a study group's availability for easy planning!</p>
-                                <p class="small"><i>Collaborated with Evan Slater</i></p>
-                                <div class="card-footer text-muted">
-                                    <i>May 21st, 2021</i>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="" class="projectCard">
-                        <div class="card" href="#">
-                            <img class="card-img-top" src="assets/website.png" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Personal Portfolio Website</h5>
-                                <p class="card-text">Built from scratch with a little help from bootstrap and flexbox.</p>
-                                <!-- <p class="small"><i></i></p> -->
-                                <div class="card-footer text-muted">
-                                    <i>Started on April 4th, 2021</i>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="https://mega.nz/folder/OnIAiJCK#du_N3G-J9C5QHWTt4_VfPw" class="projectCard">
-                        <div class="card" href="#">
-                            <img class="card-img-top" src="assets/graph2.png" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Skyrim Graph Pathfinder Project</h5>
-                                <p class="card-text">In skyrim, instantly find the best path to your destination using A*!</p>
-                                <p class="small"><i>Collaborated with Team Epic Maps: Conor Peper, Seth Marcus, and Napiwocki</i></p>
-                                <div class="card-footer text-muted">
-                                    <i>Feb 21st, 2021</i>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="https://github.com/Rosebotics/catapult2019/tree/master/projects/Henry_Tyler" class="projectCard">
-                        <div class="card" href="#">
-                            <img class="card-img-top" src="assets/onpoint.png" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">On Point</h5>
-                                <p class="card-text">Python-based reaction game created from scratch in 2 weeks with no prior python experience. This game is all about rhythm, timing, and matching in order to get the highest score! </p>
-                                <p class="small"><i>Collaborated with Tyler Kessis at Operation Catapult 2019</i></p>
-                                <div class="card-footer text-muted">
-                                    <i>July 17th, 2019</i>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                    
-                    <!-- <a href="https://github.com/rhit-loafmant/CSSE-230-Group-2-Final-Project" class="projectCard">
-                        <div class="card" href="#">
-                            <img class="card-img-top" src="assets/teamflatearth.png" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Airports of the World!</h5>
-                                <p class="card-text">A graph-based pathfinding algorithm that uses Dijkstra's algorithm 
-                                combined with a geometrically spherical distance method to make a truly ironic* application!</p>
-                                <p class="small"><i>Collaborated with Team Flat Earth: Jaden Rigg, Nathan Loafman, and small part from Kaileb White.</i></p>
-                                <div class="card-footer text-muted">
-                                    <i>May 22nd, 2021</i>
-                                </div>
-                            </div>
-                        </div>
-                    </a> -->
-                </div>
-            </div>
+            
         </main>
 
         <footer>
