--- a/about.html
+++ b/about.html
@@ -29,12 +29,15 @@
             <!-- The introduction. Says my name and a short one-liner -->
             <div id="intro" class="header primary">
                 <p> 
-                    Hello! <span id="emoji">👋</span>  I'm Henry Verrill. <br> 
-                    This is my website. Learn about me or see what I can do!
+                    About Me
                 </p>
             </div>
             <!-- The about me. This talks a bit more about myself. -->
             <div id="aboutMe" class="medium primary">
+                <p>
+                    <a class="link" href="https://www.rose-hulman.edu/">Rose-Hulman Institute of Technology</a> <br>
+                    B.S Software Engineering
+                </p>
                 <p>
                     I'm a 19 year old student majoring in Software Engineering at Rose-Hulman Institute of Technology.
                 </p>
