--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     </head>
     <body class="body">
         <header>
-            <div class="bar">
+            <div class="header">
                 <a href="#" class="btn">Home</a>
                 <a href="#" class="btn">My Work</a>
                 <a href="#" class="btn">About Me</a>
