--- a/about.html
+++ b/about.html
@@ -36,16 +36,11 @@
             <div id="aboutMe" class="medium primary">
                 <p>
                     <a class="link" href="https://www.rose-hulman.edu/">Rose-Hulman Institute of Technology</a> <br>
-                    B.S Software Engineering
+                    B.S. Software Engineering <br>
+                    Class of 2024
                 </p>
                 <p>
-                    I'm a 19 year old student majoring in Software Engineering at Rose-Hulman Institute of Technology.
-                </p>
-                <p>
-                    My goal is to live a happy and fulfilled life while making a positive impact on the world. I'm interested in a lot of diverse topics, including economics, philosophy, behavioral psychology, and technology.
-                </p>
-                <p>
-                    I hope to apply my love of economics and human behavior to my trade in software: creating products that enhance the human condition and improve life on earth, instead of treating users like numbers.
+                    When I turned 14, I found my first coding course online. It was rudimentary, but through it, I came to learn Java. I’ve been dedicated to creating and modifying as much as I can. Nearly everything in our world today runs on software. We’ve become smarter, faster, and more efficient. From my perspective, this productivity has come at the cost of happiness. It is my wish and goal to apply economics and human behavior to the field of software, so that the next generation of software makes us and life on earth smarter, faster, more efficient, and happier.
                 </p>
             </div>
             <!-- Link to the resume page. May relocate. -->
@@ -59,7 +54,7 @@
 
         <footer>
             <div class="footer">
-                <div class="footContent" id="contact">
+                <!-- <div class="footContent" id="contact">
                     <p class="big"> Contact Me:</p>
                     <div id="contact" class="small primary">
                         Cell: <b>(678)-994-9460</b> <br>
@@ -69,13 +64,11 @@
                         5500 Wabash Avenue CM 2008 <br>
                         Terre Haute, Indiana 47803 <br>
                     </div>
-                </div>
-                <!-- <div class="footContent">
-                    <p class="medium">Copyright Henry Verrill</p>
                 </div> -->
+                <div class="footContent">
+                    <p class="small">Copyright Henry Verrill</p>
+                </div>
             </div>
-            
-
         </footer>
         <div class="bg"></div>
         <div class="bottomBar"></div>
