--- a/contact.html
+++ b/contact.html
@@ -16,11 +16,11 @@
     </head>
     <body class="body">
         <header>
-            <div class="header">
-                <a href="#" class="btn">Home</a>
-                <a href="#" class="btn">My Work</a>
-                <a href="#" class="btn">About Me</a>
-                <a href="#" class="btn">Contact</a>
+            <div class="bar">
+                <a href="\" class="btn">Home</a>
+                <a href="\work.html" class="btn">My Work</a>
+                <a href="\about.html" class="btn">About Me</a>
+                <a href="\contact.html" class="btn">Contact</a>
             </div>
         </header>
         <main class="main" id="top">
