--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <header>
             <div class="bar">
                 <a href="\" class="btn">Home</a>
-                <a href="#" class="btn">My Work</a>
+                <a href="\work.html" class="btn">My Work</a>
                 <a href="\about.html" class="btn">About Me</a>
-                <a href="#" class="btn">Contact</a>
+                <a href="\contact.html" class="btn">Contact</a>
             </div>
         </header>
         <main class="main" id="top">
