--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
 
         <footer>
             <div class="footer">
-                <div class="footContent" id="contact">
+                <!-- <div class="footContent" id="contact">
                     <p class="big"> Contact Me:</p>
                     <div id="contact" class="small primary">
                         Cell: <b>(678)-994-9460</b> <br>
@@ -66,13 +66,11 @@
                         5500 Wabash Avenue CM 2008 <br>
                         Terre Haute, Indiana 47803 <br>
                     </div>
-                </div>
-                <!-- <div class="footContent">
-                    <p class="medium">Copyright Henry Verrill</p>
                 </div> -->
+                <div class="footContent">
+                    <p class="small">Copyright Henry Verrill</p>
+                </div>
             </div>
-            
-
         </footer>
         <div class="bg"></div>
         <div class="bottomBar"></div>
