--- a/work.html
+++ b/work.html
@@ -51,7 +51,7 @@
                                 <p class="small"><i>Collaborated with *Team Flat Earth: Jaden Rigg and Nathan Loafman</i></p>
                                 <div class="cardButtons">
                                     <a href="https://github.com/rhit-loafmant/CSSE-230-Group-2-Final-Project" class="btn">Source</a>
-                                    <a href="" class="btn">More Info</a>
+                                    <a href="../projects/airports.html" class="btn">More Info</a>
                                 </div>
                                 <div class="card-footer text-muted">
                                     <i>May 22nd, 2021</i>
@@ -59,19 +59,23 @@
                             </div>
                         </div>
                     </div>
-                    <a href="https://rosehulmanprojectvault.org/project/-MWdqwK2GH-erjes1lsR" class="projectCard">
+                    <div class="projectCard">
                         <div class="card" href="#">
                             <img class="card-img-top" src="assets/groupcalendar.png" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Group Event Scheduler</h5>
                                 <p class="card-text">A group event scheduler that averages a study group's availability for easy planning!</p>
                                 <p class="small"><i>Collaborated with Evan Slater</i></p>
+                                <div class="cardButtons">
+                                    <a href="https://rosehulmanprojectvault.org/project/-MWdqwK2GH-erjes1lsR" class="btn">Source</a>
+                                    <a href="../projects/calendar.html" class="btn">More Info</a>
+                                </div>
                                 <div class="card-footer text-muted">
                                     <i>May 21st, 2021</i>
                                 </div>
                             </div>
                         </div>
-                    </a>
+                    </div>
                     <a href="" class="projectCard">
                         <div class="card" href="#">
                             <img class="card-img-top" src="assets/website.png" alt="Card image cap">
