--- a/projects/webinar.html
+++ b/projects/webinar.html
@@ -34,16 +34,16 @@
             <!-- The about me. This talks a bit more about myself. -->
             <div id="abstract" class="medium primary">
                 <p>
-                    In this project, I worked together with a team of my fellow students to create a webinar about ethics and empathy in professional communication. Our goal was to research, collaborate, and professionally communicate our findings via a slide presentation and voiceover. 
+                    In this project, I worked together with a team of my fellow students to create a webinar about ethics and empathy in professional communication. Our goal was to research, collaborate, and professionally communicate our findings via a slide presentation and voiceover. My team members were Lexi Fortuna, Lauren McCarthy, and Emma Hitchcock.
                 </p>
                 <p>
-                    All of our meetings were virtual. We kept track of meeting minutes and pooled our research. We used databases of academic papers provided by the school library to find research to formulate an opinion. Our webinar focused on how virtual meetings impact productivity, scientific research, privacy, telehealth, and how ethics and social standards change compared to in-person meetings.
+                    All of our meetings were virtual. We kept track of meeting minutes and pooled our research using executive summaries. We used databases of academic papers provided by the school library to find research to formulate an opinion. Our webinar focused on how virtual meetings impact productivity, scientific research, privacy, telehealth, and how ethics and social standards change compared to in-person meetings. 
                 </p>
                 <p>
-                    We had many design and logistical problems. One of our original team members didn’t end up contributing, and we had to redistribute the workload. We had problems with making sure every team member was working with the same version of code.
+                    We created the webinar to identify the new problems that arise from virtual meetings because of the COVID-19 pandemic. One of the major points we focused on was telehealth and the privacy of virtual patients. We discussed HIPPA and the need for client-patient confidentiality, even through virtual means. We further focused on behavior during online meetings, and the impact of distracting and unfocused behavior.
                 </p>
                 <p>
-                    Technically, the application uses Dijkstra's algorithm to find the best route between airport locations. We used an XML document with a list of all major airports and their locations. The distance between each airport is calculated spherically, but the locations are displayed on a flat map. The application can calculate the total distance traveled and time traveled for any two locations. 
+                    We first created Executive Summaries of our research, and then met to further refine the topic of our webinar. From there, we compiled our research into a powerpoint presentation. To finish off the project, we each recorded our voice lines and edited them together. 
                 </p>
             </div>
             <!-- Link to the resume page. May relocate. -->
