--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                     Class of 2024
                 </p>
                 <p>
-                    When I turned 14, I found my first coding course online. It was rudimentary, but through it, I came to learn Java. Ever since, I've been glued to computers. Nearly everything in our world today runs on software. We’ve become smarter, faster, and more efficient. From my perspective, this productivity has come at the cost of happiness. It is my wish and goal to apply economics and human behavior to the field of software, so that the next generation of software makes us and life on earth smarter, faster, more efficient, <i>and</i> happier.
+                    When I turned 14, I found my first coding course online. It was rudimentary, but through it I came to learn Java. Ever since, I've been glued to computers. Nearly everything in our world today runs on software. We’ve become smarter, faster, and more efficient. From my perspective, this productivity has come at the cost of happiness. It is my wish and goal to apply economics and human behavior to the field of software, so that the next generation of software makes us and life on earth smarter, faster, more efficient, <i>and</i> happier.
                 </p>
             </div>
             <!-- Link to the resume page. May relocate. -->
