--- a/projects/webinar.html
+++ b/projects/webinar.html
@@ -30,7 +30,7 @@
                     Ethics and Technical Communication Webinar
                 </p>
             </div>
-            <img class="image" src="../assets/teamflatearth.png" alt="">
+            <img class="image" src="../assets/webinar.png" alt="">
             <!-- The about me. This talks a bit more about myself. -->
             <div id="abstract" class="medium primary">
                 <p>
