--- a/work.html
+++ b/work.html
@@ -59,7 +59,7 @@
                             <img class="card-img-top" src="assets/webinar.png" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Technical Communication Webinar</h5>
-                                <p class="card-text">A throughouly researched presentation and webinar on the ethics and impact of virtual meetings!</p>
+                                <p class="card-text">A thoroughly researched presentation and webinar on the ethics, social standards, and impact of virtual meetings.</p>
                                 <p class="small"><i>Collaborated with Lexi Fortuna, Lauren McCarthy, and Emma Hitchcock</i></p>
                                 <div class="cardButtons">
                                     <a href="https://rose-hulman.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=ab5b1852-1de7-4e1c-b8b4-ad7e0112d871" class="btn">Source</a>
@@ -76,7 +76,7 @@
                             <img class="card-img-top" src="assets/groupcalendar.png" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Group Event Scheduler</h5>
-                                <p class="card-text">A group event scheduler that averages a study group's availability for easy planning!</p>
+                                <p class="card-text">A group event scheduler that averages a study group's availability for easy planning.</p>
                                 <p class="small"><i>Collaborated with Evan Slater</i></p>
                                 <div class="cardButtons">
                                     <a href="https://rosehulmanprojectvault.org/project/-MWdqwK2GH-erjes1lsR" class="btn">Source</a>
@@ -88,8 +88,41 @@
                             </div>
                         </div>
                     </div>
-                    
-                    <a href="https://github.com/Rosebotics/catapult2019/tree/master/projects/Henry_Tyler" class="projectCard">
+                    <div class="projectCard">
+                        <div class="card" href="#">
+                            <img class="card-img-top" src="assets/atlantalegalaid.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Atlanta Legal Aid Society Volunteer</h5>
+                                <p class="card-text">Volunteer hours working with the IT manager. Learning professional skills all while helping people!</p>
+                                <!-- <p class="small"><i>Collaborated with Evan Slater</i></p> -->
+                                <div class="cardButtons">
+                                    <a href="https://www.firstinspires.org/robotics/ftc" class="btn">Website</a>
+                                    <a href="../projects/first.html" class="btn">More Info</a>
+                                </div>
+                                <div class="card-footer text-muted">
+                                    <i>Summer 2018 - Fall 2019</i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="projectCard">
+                        <div class="card" href="#">
+                            <img class="card-img-top" src="assets/first.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">FIRST Competitive Robotics Team</h5>
+                                <p class="card-text">4 years of building robots, programming, and learning professional skills.</p>
+                                <!-- <p class="small"><i>Collaborated with Evan Slater</i></p> -->
+                                <div class="cardButtons">
+                                    <a href="" class="btn">Website</a>
+                                    <a href="../projects/legalaid.html" class="btn">More Info</a>
+                                </div>
+                                <div class="card-footer text-muted">
+                                    <i>Summer 2018 - Fall 2019</i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <a href="https://github.com/Rosebotics/catapult2019/tree/master/projects/Henry_Tyler" class="projectCard">
                         <div class="card" href="#">
                             <img class="card-img-top" src="assets/onpoint.png" alt="Card image cap">
                             <div class="card-body">
@@ -101,7 +134,7 @@
                                 </div>
                             </div>
                         </div>
-                    </a>
+                    </a> -->
                     
                 </div>
             </div>
