--- a/projects/first.html
+++ b/projects/first.html
@@ -34,17 +34,9 @@
             <!-- The about me. This talks a bit more about myself. -->
             <div id="abstract" class="medium primary">
                 <p>
-                    For this project, I collaborated with a team of other students to make a pathfinding application from scratch. The goal was to use one of two graph-based pathfinding algorithms and create a map navigation tool.
+                    Throughout high school, I was a member of 3 different FIRST robotics teams. Though FIRST is a high school extracurricular, it is responsible for many of the engineering and professional communication skills I know today.  I was the founder and co-captain of a FIRST FTC team and the lead programmer on each team. Successful FTC teams are run like start-up companies. The team develops a business plan, a marketing and outreach plan, documents product development and presents its work to a panel of judges. The robot is only a small part of the challenge.
                 </p>
-                <p>
-                    Over the course of three weeks, me and the ironically named “Team Flat Earth”: Jaden Rigg and Nathan Loafman, worked together to create an application that would find the best flight path to and from any major airport in the world. As this application was made during the pandemic, we met for team meetings virtually most of the time. As a team, we were responsible for keeping track of meeting minutes, member responsibilities, a final presentation showing off our application, and creating the application in Java from scratch.
-                </p>
-                <p>
-                    We had many design and logistical problems. One of our original team members didn’t end up contributing, and we had to redistribute the workload. We had problems with making sure every team member was working with the same version of code.
-                </p>
-                <p>
-                    Technically, the application uses Dijkstra's algorithm to find the best route between airport locations. We used an XML document with a list of all major airports and their locations. The distance between each airport is calculated spherically, but the locations are displayed on a flat map. The application can calculate the total distance traveled and time traveled for any two locations. 
-                </p>
+                
             </div>
             <!-- Link to the resume page. May relocate. -->
             <!-- <div id="resume" class="big primary">
