--- a/projects/first.html
+++ b/projects/first.html
@@ -34,7 +34,7 @@
             <!-- The about me. This talks a bit more about myself. -->
             <div id="abstract" class="medium primary">
                 <p>
-                    Throughout high school, I was a member of 3 different FIRST robotics teams. Though FIRST is a high school extracurricular, it is responsible for many of the engineering and professional communication skills I know today.  I was the founder and co-captain of a FIRST FTC team and the lead programmer on each team. Successful FTC teams are run like start-up companies. The team develops a business plan, a marketing and outreach plan, documents product development and presents its work to a panel of judges. The robot is only a small part of the challenge.
+                    Throughout high school, I was a member of 3 different FIRST robotics teams. Though FIRST is a high school extracurricular, it is responsible for many of the engineering and professional communication skills I know today.  I was the founder and co-captain of a FIRST FTC team and the lead programmer on each team. Successful FTC teams are run like start-up companies, with their own business plan and a marketing and outreach plan. The team creates documents on product development and presents its work to a panel of judges. The robot is only a small part of the challenge.
                 </p>
                 
             </div>
