--- a/projects/airports.html
+++ b/projects/airports.html
@@ -40,7 +40,7 @@
                     Over the course of three weeks, me and the ironically named “Team Flat Earth”: Jaden Rigg and Nathan Loafman, worked together to create an application that would find the best flight path to and from any major airport in the world. As this application was made during the pandemic, we met for team meetings virtually most of the time. As a team, we were responsible for keeping track of meeting minutes, member responsibilities, a final presentation showing off our application, and creating the application in Java from scratch.
                 </p>
                 <p>
-                    We had many design and logistical problems. One of our original team members didn’t end up contributing, and we had to redistribute the workload. We had problems with making sure every team member was working with the same version of code.
+                    We had many design and logistical problems. One of our original team members didn’t contribute meaningfully, and we had to redistribute the workload. We had problems with making sure every team member was working with the same version of code. Through hard work and long hours, we got the application working. As an aspiring software engineer, this tested my technical limits, and put my teamwork skills to the test.
                 </p>
                 <p>
                     Technically, the application uses Dijkstra's algorithm to find the best route between airport locations. We used an XML document with a list of all major airports and their locations. The distance between each airport is calculated spherically, but the locations are displayed on a flat map. The application can calculate the total distance traveled and time traveled for any two locations. 
