--- a/work.html
+++ b/work.html
@@ -97,7 +97,7 @@
                                 <!-- <p class="small"><i>Collaborated with Evan Slater</i></p> -->
                                 <div class="cardButtons">
                                     <a href="https://www.firstinspires.org/robotics/ftc" class="btn">Website</a>
-                                    <a href="../projects/first.html" class="btn">More Info</a>
+                                    <a href="../projects/legalaid.html" class="btn">More Info</a>
                                 </div>
                                 <div class="card-footer text-muted">
                                     <i>Summer 2018 - Fall 2019</i>
@@ -117,7 +117,7 @@
                                     <a href="../projects/legalaid.html" class="btn">More Info</a>
                                 </div>
                                 <div class="card-footer text-muted">
-                                    <i>Summer 2018 - Fall 2019</i>
+                                    <i>Summer 2016 - Fall 2020</i>
                                 </div>
                             </div>
                         </div>
